# ai-consciousness-engine

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Dockerfile.mvp  README.md  Résumé du projet.txt  docker-compose.dev-ui.yml  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.mvp.yml  docker-compose.production.yml  docker-compose.simple.yml  docker-compose.yml  error_handling_demo_report.json  eval_chat.json  eval_generate.json  eval_quality.json  gw_eval_quality.json  justfile  mock-api.html  netlify.toml  package.json  resp.json  simple-web-demo.html  test_runner.py  vite.config.ts
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml  format.yml  production-deployment.yml  smoke.yml
.plan/: INTEGRATION_ROADMAP.md  SUMMARY.md
.plan/hooks/: consciousness-quality-validator.md  ethical-compliance-guardian.md  performance-optimization-trigger.md
.plan/mvp-server/: package-lock.json  package.json
.plan/steering/: consciousness-ai-guidelines.md  ethical-reasoning-framework.md  multimodal-interaction-patterns.md  neuromorphic-performance.md  quantum-ml-optimization.md
agent-orchestrator/src/: lib.rs
ai-governance/src/: lib.rs
analytics-platform/src/: data_pipeline.py
api-gateway/: Cargo.toml  Dockerfile  README.md
api-gateway/src/: main.rs  models.rs
api-gateway/tests/: openapi.rs
blockchain-integration/contracts/: ConsciousnessToken.sol
config/environments/: development.yml  production.yml  staging.yml
consciousness-engine/: CONSCIOUSNESS_TESTING_REPORT.md  Cargo.toml  Dockerfile  ERROR_HANDLING_COMPLETION_REPORT.md  SELF_AWARENESS_COMPLETION.md  demo_error_handling.py  package-lock.json  validate_tests.py
consciousness-engine/benches/: consciousness_benchmarks.rs
consciousness-engine/docs/: self-awareness-module.md
consciousness-engine/examples/: basic_usage.rs  consciousness_demo.rs  consciousness_pipeline.rs
consciousness-engine/src/: core.rs  error.rs  integration.rs  lib.rs  multimodal.rs  neuromorphic.rs  profiling.rs  quantum_acceleration.rs  types.rs  utils.rs  vault_integration.rs
consciousness-engine/tests/: integration_tests.rs  real_world_scenarios.rs  stress_tests.rs
consciousness-service/: Cargo.toml
consciousness-service/src/: main.rs
docker/: nginx.conf  supervisord.conf
docs/: 90_DAY_EXECUTION_PLAN.md  BENCHMARKING_README.md  BUSINESS_PLAN.md  COMMERCIALIZATION_STRATEGY.md  COMMIT_MESSAGE.md  COMPLIANCE_CERTIFICATIONS.md  CONSCIOUSNESS_ENGINE_SUMMARY.md  DOCUMENTATION_TECHNIQUE.md  GITHUB_DEPLOY_READY.md  GUIDE_DEPLOIEMENT.md  GUIDE_PUSH_GITHUB.md  GUIDE_RESOLUTION_GITHUB.md  GUIDE_SECURITE_GITHUB.md  IMPLEMENTATION_COMPLETE.md  INFINITE_REFRESH_SOLUTION.md  INVESTOR_CHECKLIST.md  MVP_COMPLETION_REPORT.md  PHASE_4_ROADMAP.md  PITCH_DECK.md  PRIVACY_POLICY.md  PROJECT_STATUS.md  README_CLEAN.md  README_FR.md  RESTART_README.md  RESTART_SYSTEM_DOCUMENTATION.md  SECURITY.md  TASK_17_1_COMPLETION_SUMMARY.md  TASK_1_1_COMPLETION_SUMMARY.md  TASK_1_2_COMPLETION_SUMMARY.md  TASK_2_1_COMPLETION_SUMMARY.md  TERMS_OF_SERVICE.md  UI_FIXES_SUMMARY.md  WEB_UI_FIXES_README.md
iot-ecosystem/src/: consciousness_iot_hub.py
k8s/: configmap.yaml  consciousness-engine.yaml  namespace.yaml  postgres.yaml  secrets.yaml
k8s/production/: consciousness-engine.yaml  ingress.yaml  monitoring.yaml  namespace.yaml  postgres.yaml
migrations/: 001_initial_schema.sql
ml-pipeline/training/: consciousness_trainer.py
mobile-apps/consciousness-mobile/: package.json
mock-services/: mock-api-gateway.js  mock-consciousness-api.js  package-lock.json  package.json  simple-gateway.js
monitoring/: prometheus.yml
nanotechnology/src/: molecular_consciousness.py
netlify/functions/: consciousness-engine.mts  neural-interface.mts
neural-interfaces/src/: brain_computer_interface.py
production-infrastructure/monitoring/: production-monitoring-stack.yaml
production-infrastructure/terraform/: global-production.tf
quantum-computing/src/: quantum_consciousness.py
rust-services/: Cargo.toml
rust-services/api-gateway/: Cargo.toml  Dockerfile
rust-services/api-gateway/src/: main.rs
rust-services/api-marketplace/: Cargo.toml
rust-services/api-marketplace/src/: main.rs
rust-services/consciousness-engine/: Cargo.toml  Dockerfile
rust-services/consciousness-engine/migrations/: 001_initial.sql
rust-services/consciousness-engine/src/: main.rs
rust-services/user-service/: Cargo.toml
rust-services/user-service/src/: main.rs
scripts/: audit-encoding.ps1  benchmark_consciousness.sh  build-and-serve-static.ps1  build-netlify.ps1  build-static-ui.bat  build-static-ui.ps1  build_consciousness_engine.sh  build_containers.ps1  clean-and-recreate-repo.ps1  clean-removable.ps1  config_management.ps1  deploy-consciousness-engine-secure.ps1  deploy-enterprise-complete.ps1  deploy-github-netlify.ps1  deploy-github.ps1  deploy-global-production.ps1  deploy-kubernetes.sh  deploy-production-complete.ps1  deploy-production.sh  deploy-technological-transcendence.ps1  deploy-ultimate-ecosystem.ps1  deploy.sh  deploy_consciousness_platform.sh  deploy_containers.ps1  deploy_network_security.ps1  deploy_vault.ps1  dev-smoke.ps1  dev-vision.ps1  echo-body.ps1  emergency-simple.ps1  emergency-start.ps1  final-stable-start.ps1  fix-conflicts-and-push.ps1  fix-github-permissions.ps1  github-desktop-deploy.ps1  list-removable.ps1  push-all-files-to-github.ps1  push-github-clean.ps1  push-github-simple.ps1  push-to-github-complete.ps1  (+27 more)
scripts/maintenance/: cleanup-dryrun.ps1  cleanup-execute.ps1
scripts/misc/: health-check.sh  run_consciousness_tests.ps1  start-ui.sh  userdata.sh
scripts/reports/: cleanup-candidates.txt
shared/: Cargo.toml
shared/src/: database.rs  error.rs  lib.rs  types.rs  vault_client.rs
simple-mock/: api-gateway.js  consciousness-engine.js  ollama-adapter.js
space-consciousness/src/: galactic_consciousness_network.py
src/: App.tsx
terraform/: README.md  main.tf  providers.tf  variables.tf  versions.tf
tests/: integration_tests.rs
web-ui/: .env.example  .env.production
(+133 files in other folders)
