[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core dependencies
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Validation
validator.workspace = true

# Database
sqlx.workspace = true

# Async
tokio.workspace = true

# HTTP
axum.workspace = true

[dev-dependencies]
tokio-test.workspace = true