[package]
name = "api-marketplace"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }
config = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
stripe-rust = "0.25"
async-stripe = "0.25"
semver = "1.0"
regex = "1.10"
base64 = "0.21"
sha2 = "0.10"
hmac = "0.12"
